<resources>
    <string name="app_name">doAnAdroid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_mission">Nhiệm vụ nhập đây</string>
    <string name="nhiem_vu_add">Là những gì được thực hiện?</string>
    <string name="tv_ngay_dao_han">Ngày đáo hạn</string>
    <string name="hin_watch">Không giờ (Cả ngày)</string>
    <string name="khong_co_ngay">Không có ngày</string>
    <string name="tv_add_list">Thêm vào danh sách</string>
    <string name="nomal">Mặc định</string>

    <string name="open_drawer">Open Drawer </string>
    <string name="close_drawer">Close Drawer </string>

    <string name="name_drawer">Nguyễn Duy Khánh</string>
    <string name="list_all">Danh sách tất cả</string>
    <string name="defaul_t">Mặc định</string>
    <string name="individual">Cá nhân</string>
    <string name="work">Làm việc</string>
    <string name="shopping">Mua sắm</string>
    <string name="complete">Hoàn thành</string>
    <string name="danh_muc">DANH MỤC</string>
    <string name="delete">delete</string>
    <string name="share">share</string>
    <string name="checkbox_complete">checkbox_complete</string>
    <string name="checkbox">checkbox</string>
</resources>